Fixed bug causing the screen to be much wider on mobile devices

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,6 +15,10 @@ body {
 	font-family: 'Assistant', sans-serif;
 }
 
+body, html {
+	overflow-x: hidden;
+}
+
 /* BLOCK QUOTES */
 blockquote {
 	margin: 0;
